--- a/modules/nf-core/checkv/downloaddatabase/meta.yml
+++ b/modules/nf-core/checkv/downloaddatabase/meta.yml
@@ -22,16 +22,18 @@ tools:
       licence: ["BSD License"]
       identifier: biotools:checkv
 output:
-  - checkv_db:
-      - ${prefix}/*:
-          type: directory
-          description: directory pointing to database
-          pattern: "${prefix}/"
-  - versions:
-      - versions.yml:
-          type: file
-          description: File containing software versions
-          pattern: "versions.yml"
+  checkv_db:
+    - ${prefix}/*:
+        type: directory
+        description: directory pointing to database
+        pattern: "${prefix}/"
+  versions:
+    - versions.yml:
+        type: file
+        description: File containing software versions
+        pattern: "versions.yml"
+        ontologies:
+          - edam: http://edamontology.org/format_3750 # YAML
 authors:
   - "@Joon-Klaps"
 maintainers:
