--- a/modules/nf-core/krona/ktimporttext/meta.yml
+++ b/modules/nf-core/krona/ktimporttext/meta.yml
@@ -33,9 +33,10 @@ input:
           be added. Quantities can be omitted if -q is specified. Lines beginning with
           '#' will be ignored."
         pattern: "*.{txt}"
+        ontologies: []
 output:
-  - html:
-      - meta:
+  html:
+    - - meta:
           type: map
           description: |
             Groovy Map containing sample information
@@ -44,11 +45,14 @@ output:
           type: file
           description: A html file containing an interactive krona plot.
           pattern: "*.{html}"
-  - versions:
-      - versions.yml:
-          type: file
-          description: File containing software versions
-          pattern: "versions.yml"
+          ontologies: []
+  versions:
+    - versions.yml:
+        type: file
+        description: File containing software versions
+        pattern: "versions.yml"
+        ontologies:
+          - edam: http://edamontology.org/format_3750 # YAML
 authors:
   - "@jianhong"
 maintainers:
