--- a/modules/nf-core/bbmap/bbduk/meta.yml
+++ b/modules/nf-core/bbmap/bbduk/meta.yml
@@ -24,13 +24,15 @@ input:
         description: |
           List of input FastQ files of size 1 and 2 for single-end and paired-end data,
           respectively.
-  - - contaminants:
-        type: file
-        description: |
-          Reference files containing adapter and/or contaminant sequences for sequence kmer matching
+        ontologies: []
+  - contaminants:
+      type: file
+      description: |
+        Reference files containing adapter and/or contaminant sequences for sequence kmer matching
+      ontologies: []
 output:
-  - reads:
-      - meta:
+  reads:
+    - - meta:
           type: map
           description: |
             Groovy Map containing sample information
@@ -39,8 +41,10 @@ output:
           type: file
           description: The trimmed/modified fastq reads
           pattern: "*fastq.gz"
-  - log:
-      - meta:
+          ontologies:
+            - edam: http://edamontology.org/format_3989 # GZIP format
+  log:
+    - - meta:
           type: map
           description: |
             Groovy Map containing sample information
@@ -49,11 +53,14 @@ output:
           type: file
           description: Bbduk log file
           pattern: "*bbduk.log"
-  - versions:
-      - versions.yml:
-          type: file
-          description: File containing software versions
-          pattern: "versions.yml"
+          ontologies: []
+  versions:
+    - versions.yml:
+        type: file
+        description: File containing software versions
+        pattern: "versions.yml"
+        ontologies:
+          - edam: http://edamontology.org/format_3750 # YAML
 authors:
   - "@MGordon09"
 maintainers:
