--- a/modules/nf-core/bcftools/consensus/meta.yml
+++ b/modules/nf-core/bcftools/consensus/meta.yml
@@ -23,21 +23,25 @@ input:
         type: file
         description: VCF file
         pattern: "*.{vcf}"
+        ontologies: []
     - tbi:
         type: file
         description: tabix index file
         pattern: "*.{tbi}"
+        ontologies: []
     - fasta:
         type: file
         description: FASTA reference file
         pattern: "*.{fasta,fa}"
+        ontologies: []
     - mask:
         type: file
         description: BED file used for masking
         pattern: "*.{bed}"
+        ontologies: []
 output:
-  - fasta:
-      - meta:
+  fasta:
+    - - meta:
           type: map
           description: |
             Groovy Map containing sample information
@@ -46,11 +50,14 @@ output:
           type: file
           description: FASTA reference consensus file
           pattern: "*.{fasta,fa}"
-  - versions:
-      - versions.yml:
-          type: file
-          description: File containing software versions
-          pattern: "versions.yml"
+          ontologies: []
+  versions:
+    - versions.yml:
+        type: file
+        description: File containing software versions
+        pattern: "versions.yml"
+        ontologies:
+          - edam: http://edamontology.org/format_3750 # YAML
 authors:
   - "@joseespinosa"
   - "@drpatelh"
