--- a/modules/nf-core/bracken/bracken/meta.yml
+++ b/modules/nf-core/bracken/bracken/meta.yml
@@ -26,13 +26,16 @@ input:
         type: file
         description: TSV file with six columns coming from kraken2 output
         pattern: "*.{tsv}"
-  - - database:
-        type: file
-        description: Directory containing the kraken2/Bracken files for analysis
-        pattern: "*"
+        ontologies:
+          - edam: http://edamontology.org/format_3475 # TSV
+  - database:
+      type: file
+      description: Directory containing the kraken2/Bracken files for analysis
+      pattern: "*"
+      ontologies: []
 output:
-  - reports:
-      - meta:
+  reports:
+    - - meta:
           type: map
           description: |
             Groovy Map containing sample information
@@ -44,24 +47,26 @@ output:
             Groovy Map containing sample information
             e.g. [ id:'test', single_end:false ]
           pattern: "*.{tsv}"
-  - txt:
-      - meta:
+  txt:
+    - - meta:
           type: map
           description: |
             Groovy Map containing sample information
             e.g. [ id:'test', single_end:false ]
-          pattern: "*.txt"
+          pattern: "*.{tsv}"
       - bracken_kraken_style_report:
           type: map
           description: |
             Groovy Map containing sample information
             e.g. [ id:'test', single_end:false ]
           pattern: "*.txt"
-  - versions:
-      - versions.yml:
-          type: file
-          description: File containing software versions
-          pattern: "versions.yml"
+  versions:
+    - versions.yml:
+        type: file
+        description: File containing software versions
+        pattern: "versions.yml"
+        ontologies:
+          - edam: http://edamontology.org/format_3750 # YAML
 authors:
   - "@Midnighter"
 maintainers:
