--- a/modules/nf-core/emboss/cons/meta.yml
+++ b/modules/nf-core/emboss/cons/meta.yml
@@ -27,9 +27,10 @@ input:
         type: file
         description: Multiple sequence alignment (unzipped)
         pattern: "*.{fasta,fa,fas,fsa,seq,mpfa,aln,clustal,clw,msf,phy,phylip,stockholm,sto,msf,afa,afa,a}"
+        ontologies: []
 output:
-  - consensus:
-      - meta:
+  consensus:
+    - - meta:
           type: map
           description: |
             Groovy Map containing sample information
@@ -38,11 +39,14 @@ output:
           type: file
           description: Consensus sequence calculated from multiple sequence alignment
           pattern: "*.fa"
-  - versions:
-      - versions.yml:
-          type: file
-          description: File containing software versions
-          pattern: "versions.yml"
+          ontologies: []
+  versions:
+    - versions.yml:
+        type: file
+        description: File containing software versions
+        pattern: "versions.yml"
+        ontologies:
+          - edam: http://edamontology.org/format_3750 # YAML
 authors:
   - "@Joon-Klaps"
 maintainers:
