--- a/modules/nf-core/krakentools/kreport2krona/meta.yml
+++ b/modules/nf-core/krakentools/kreport2krona/meta.yml
@@ -23,9 +23,10 @@ input:
         type: file
         description: Kraken report
         pattern: "*.{txt,kreport}"
+        ontologies: []
 output:
-  - txt:
-      - meta:
+  txt:
+    - - meta:
           type: map
           description: |
             Groovy Map containing sample information
@@ -34,11 +35,14 @@ output:
           type: file
           description: Krona text-based input file converted from Kraken report
           pattern: "*.{txt,krona}"
-  - versions:
-      - versions.yml:
-          type: file
-          description: File containing software versions
-          pattern: "versions.yml"
+          ontologies: []
+  versions:
+    - versions.yml:
+        type: file
+        description: File containing software versions
+        pattern: "versions.yml"
+        ontologies:
+          - edam: http://edamontology.org/format_3750 # YAML
 authors:
   - "@MillironX"
 maintainers:
