--- a/modules/nf-core/mmseqs/linclust/meta.yml
+++ b/modules/nf-core/mmseqs/linclust/meta.yml
@@ -27,9 +27,10 @@ input:
     - db_input:
         type: file
         description: Input database
+        ontologies: []
 output:
-  - db_cluster:
-      - meta:
+  db_cluster:
+    - - meta:
           type: map
           description: |
             Groovy Map containing sample information
@@ -37,11 +38,13 @@ output:
       - ${prefix}/:
           type: directory
           description: a clustered MMseqs2 database
-  - versions:
-      - versions.yml:
-          type: file
-          description: File containing software versions
-          pattern: "versions.yml"
+  versions:
+    - versions.yml:
+        type: file
+        description: File containing software versions
+        pattern: "versions.yml"
+        ontologies:
+          - edam: http://edamontology.org/format_3750 # YAML
 authors:
   - "@vagkaratzas"
 maintainers:
