--- a/modules/nf-core/trinity/meta.yml
+++ b/modules/nf-core/trinity/meta.yml
@@ -25,9 +25,11 @@ input:
         description: |
           List of input fasta/fastq reads to be assembled into a transcriptome.
         pattern: "*.{fa,fasta,fq,fastq}"
+        ontologies:
+          - edam: http://edamontology.org/format_1930 # FASTQ
 output:
-  - transcript_fasta:
-      - meta:
+  transcript_fasta:
+    - - meta:
           type: map
           description: |
             Groovy Map containing sample information
@@ -36,8 +38,10 @@ output:
           type: file
           description: de novo assembled transcripts fasta file compressed
           pattern: "*.fa.gz"
-  - log:
-      - meta:
+          ontologies:
+            - edam: http://edamontology.org/format_3989 # GZIP format
+  log:
+    - - meta:
           type: map
           description: |
             Groovy Map containing sample information
@@ -46,11 +50,14 @@ output:
           type: file
           description: Log from trinity
           pattern: "*.log"
-  - versions:
-      - versions.yml:
-          type: file
-          description: File containing software versions
-          pattern: "versions.yml"
+          ontologies: []
+  versions:
+    - versions.yml:
+        type: file
+        description: File containing software versions
+        pattern: "versions.yml"
+        ontologies:
+          - edam: http://edamontology.org/format_3750 # YAML
 authors:
   - "@timslittle"
   - "@gallvp"
