--- a/modules/nf-core/umitools/dedup/meta.yml
+++ b/modules/nf-core/umitools/dedup/meta.yml
@@ -25,18 +25,20 @@ input:
         description: |
           BAM file containing reads to be deduplicated via UMIs.
         pattern: "*.{bam}"
+        ontologies: []
     - bai:
         type: file
         description: |
           BAM index files corresponding to the input BAM file.
         pattern: "*.{bai}"
-  - - get_output_stats:
-        type: boolean
-        description: |
-          Whether or not to generate output stats.
+        ontologies: []
+  - get_output_stats:
+      type: boolean
+      description: |
+        Whether or not to generate output stats.
 output:
-  - bam:
-      - meta:
+  bam:
+    - - meta:
           type: map
           description: |
             Groovy Map containing sample information
@@ -45,8 +47,9 @@ output:
           type: file
           description: BAM file with deduplicated UMIs.
           pattern: "*.{bam}"
-  - log:
-      - meta:
+          ontologies: []
+  log:
+    - - meta:
           type: map
           description: |
             Groovy Map containing sample information
@@ -55,8 +58,9 @@ output:
           type: file
           description: File with logging information
           pattern: "*.{log}"
-  - tsv_edit_distance:
-      - meta:
+          ontologies: []
+  tsv_edit_distance:
+    - - meta:
           type: map
           description: |
             Groovy Map containing sample information
@@ -66,8 +70,10 @@ output:
           description: Reports the (binned) average edit distance between the UMIs at
             each position.
           pattern: "*edit_distance.tsv"
-  - tsv_per_umi:
-      - meta:
+          ontologies:
+            - edam: http://edamontology.org/format_3475 # TSV
+  tsv_per_umi:
+    - - meta:
           type: map
           description: |
             Groovy Map containing sample information
@@ -76,8 +82,10 @@ output:
           type: file
           description: UMI-level summary statistics.
           pattern: "*per_umi.tsv"
-  - tsv_umi_per_position:
-      - meta:
+          ontologies:
+            - edam: http://edamontology.org/format_3475 # TSV
+  tsv_umi_per_position:
+    - - meta:
           type: map
           description: |
             Groovy Map containing sample information
@@ -86,11 +94,15 @@ output:
           type: file
           description: Tabulates the counts for unique combinations of UMI and position.
           pattern: "*per_position.tsv"
-  - versions:
-      - versions.yml:
-          type: file
-          description: File containing software versions
-          pattern: "versions.yml"
+          ontologies:
+            - edam: http://edamontology.org/format_3475 # TSV
+  versions:
+    - versions.yml:
+        type: file
+        description: File containing software versions
+        pattern: "versions.yml"
+        ontologies:
+          - edam: http://edamontology.org/format_3750 # YAML
 authors:
   - "@drpatelh"
   - "@grst"
