--- a/modules/nf-core/vrhyme/vrhyme/meta.yml
+++ b/modules/nf-core/vrhyme/vrhyme/meta.yml
@@ -23,21 +23,26 @@ input:
         description: |
           Groovy Map containing sample information
           e.g. [ id:'test']
-    - fasta:
-        type: file
-        description: Contigs/scaffolds identified as viral
-        pattern: "*.{fna,fasta,fa,fasta.gz,fa.gz}"
-        ontologies:
-          - edam: http://edamontology.org/format_1929 # FASTA
     - reads:
         type: file
         description: Preprocessed FASTQ file containing sample reads
         pattern: "*.{fastq}"
         ontologies:
           - edam: http://edamontology.org/format_1930 # FASTQ
+  - - meta2:
+        type: map
+        description: |
+          Groovy Map containing fasta information
+          e.g. [ id:'test']
+    - fasta:
+        type: file
+        description: Contigs/scaffolds identified as viral
+        pattern: "*.{fna,fasta,fa,fasta.gz,fa.gz}"
+        ontologies:
+          - edam: http://edamontology.org/format_1929 # FASTA
 output:
-  - bins:
-      - meta:
+  bins:
+    - - meta:
           type: map
           description: |
             Groovy Map containing sample information
@@ -46,37 +51,37 @@ output:
           type: directory
           description: Directory containing bin FASTA files
           pattern: "**/vRhyme_best_bins_fasta/"
-  - membership:
-      - meta:
+  membership:
+    - - meta:
           type: map
           description: |
             Groovy Map containing sample information
-            e.g. [ id:'test']
+            e.g. [ id:'test' ]
       - "**/vRhyme_best_bins.*.membership.tsv":
           type: file
           description: TSV file describing the contig/scaffold membership of each bin
           pattern: "vRhyme_best_bins.*.membership.tsv"
           ontologies:
             - edam: http://edamontology.org/format_3475 # TSV
-  - summary:
-      - meta:
+  summary:
+    - - meta:
           type: map
           description: |
             Groovy Map containing sample information
-            e.g. [ id:'test', single_end:false ]
+            e.g. [ id:'test' ]
       - "**/vRhyme_best_bins.*.summary.tsv":
           type: file
           description: TSV file summarizing the attributes of each bin
           pattern: "vRhyme_best_bins.*.summary.tsv"
           ontologies:
             - edam: http://edamontology.org/format_3475 # TSV
-  - versions:
-      - versions.yml:
-          type: file
-          description: File containing software versions
-          pattern: "versions.yml"
-          ontologies:
-            - edam: http://edamontology.org/format_3750 # YAML
+  versions:
+    - versions.yml:
+        type: file
+        description: File containing software versions
+        pattern: "versions.yml"
+        ontologies:
+          - edam: http://edamontology.org/format_3750 # YAML
 authors:
   - "@CarsonJM"
 maintainers:
