--- a/modules/nf-core/xz/decompress/meta.yml
+++ b/modules/nf-core/xz/decompress/meta.yml
@@ -25,9 +25,10 @@ input:
         type: file
         description: File to be decompressed
         pattern: "*.{xz}"
+        ontologies: []
 output:
-  - file:
-      - meta:
+  file:
+    - - meta:
           type: map
           description: |
             Groovy Map containing sample information
@@ -36,11 +37,14 @@ output:
           type: file
           description: The decompressed file
           pattern: "*.*"
-  - versions:
-      - versions.yml:
-          type: file
-          description: File containing software versions
-          pattern: "versions.yml"
+          ontologies: []
+  versions:
+    - versions.yml:
+        type: file
+        description: File containing software versions
+        pattern: "versions.yml"
+        ontologies:
+          - edam: http://edamontology.org/format_3750 # YAML
 authors:
   - "@leoisl"
 maintainers:
